[package]
name = "study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.196", features = ["derive"] }

rust-crypto = "0.2.36"

quick-xml = { version = "0.31.0", features = ["serialize"] }

rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-sqlite = { version = "4.5" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.6"
chrono = "0.4.33"