[package]
name = "study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }

rust-crypto = "0.2.36"

quick-xml = { version = "0.36.1", features = ["serialize"] }

rbs = { version = "4.5.18" }
rbatis = { version = "4.5.30" }
rbdc-sqlite = { version = "4.5.5" }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
fast_log = "1.7.4"
chrono = "0.4.38"